--- a/menu_kling.html
+++ b/menu_kling.html
@@ -31,6 +31,7 @@
 			</div>
 		</div>
 		<form id="dataForm" method="POST"> <!-- make sure to add action to form if you want to store data -->
+			<input type="hidden" id="cbAnswer" name="cbAnswer" value="">
 			<input type="hidden" id="arithAVG" name="arithAVG" value="">
 			<input type="hidden" id="arithSD" name="arithSD" value="">
 			<input type="hidden" id="accuracy" name="accuracy" value="">
